# cookiecutter-django-backend

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  LICENSE  README.rst  cookiecutter.json  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
hooks/: post_gen_project.py
tests/: test_docker.sh
{{ cookiecutter.github_project_name }}/: .dockerignore  .editorconfig  .env  .gitignore  Dockerfile  README.rst  common-services.yml  dev-requirements.in  docker-compose.develop.yml  docker-compose.yml  entrypoint.sh  manage.py  requirements.in  start.sh
{{ cookiecutter.github_project_name }}/compose/gunicorn/: Dockerfile
{{ cookiecutter.github_project_name }}/conf/nginx/conf.d/: {{ cookiecutter.domain_name }}.conf
{{ cookiecutter.github_project_name }}/conf/yacron/: yacron.yml
{{ cookiecutter.github_project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  apps.py  celery.py  wsgi.py
{{ cookiecutter.github_project_name }}/{{ cookiecutter.project_slug }}/settings/: defaults.py  develop.py  production.py
{{ cookiecutter.github_project_name }}/{{ cookiecutter.project_slug }}/templates/admin/: base_site.html
{{ cookiecutter.project_name }}/: README.rst  requirements.txt
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  apps.py  urls.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/settings/: defaults.py  develop.py  production.py
