[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = cookiecutter-django-backend
version = 0.1.0
description = A cookiecutter for enterprise projects with support for Celery, Django Rest Framework and deployment with Ansible and Docker
long_description = file: README.rst
keywords = cookiecutter-django-backend
author = Nekmo
author_email = contacto@nekmo.com
url = https://github.com/Nekmo/cookiecutter-django-backend/
download_url = https://github.com/Nekmo/cookiecutter-django-backend/archive/master.zip
license = MIT license
license_files =
	LICENSE
platform = any
classifiers =
	Development Status :: 3 - Alpha
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Operating System :: POSIX :: SunOS/Solaris
	Operating System :: POSIX :: BSD
	License :: OSI Approved :: MIT License
	Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file:requirements.in

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, F403, F401, E122
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9

[aliases]
